#8 Controllers and routing: fixed bugs in homework

--- a/app/code/OleksiiBezpoiasnyi/ControllerDemo/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/ControllerDemo/i18n/ru_RU.csv
@@ -1,3 +1,3 @@
-"Full name: %1","Полное имя: %1"
+"Full name: %1 %2","Полное имя: %1 %2"
 "Repository URL: ","URL Репозитория: "
 "GitHub Repository","GitHub Репозиторий"
