--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -1,11 +1,19 @@
-"Loyalty program for Regular Customers","Программа лояльности для постоянных клиентов"
+pending,на рассмотрении
+approved,утверждено
+declined,отклонено
+"You request for registration in loyalty program was accepted! Your discount will be available after admin verification","Ваш запрос на регистрацию в программе лояльности успешно отправлен! Ваша скидка будет доступна после проверки администратором"
+"Your request can't be sent. Please, contact us if you see this message.","Ваш запрос не может быть отправлен. Если Вы видите это сообщение, свяжитесь с нами."
 "Please register to participate in the loyalty program","Пожайлуста зарегистрируйтесь для участия в программе лояльности"
 "Participate in the program","Участвовать в программе"
 "Registration in Loyalty Program","Регистрация в программе лояльности"
-"Name","Имя"
+Name,Имя
 "Email","Адрес электронной почты"
-"Register","Зарегистрироваться"
-"You request for register in Loyalty Program was successful!","Ваш запрос на регистрацию в программе лояльности успешно отправлен"
-"Success","Успешно"
-"Error","Ошибка"
-"Your request can't be sent. Please, contact us if you see this message.","ваш запрос не может быть отправлен. Если Вы видите это сообщение, свяяжитесь с нами"
+Register,Зарегистрироваться
+"Your amount of discount:","Размер вашей скидки:"
+"The amount of the discount has not yet been set by the administrator","Размер Вашей скидки на даный момент не установлен администратором"
+"Request status:","Статус запроса:"
+"No request to register in loyalty program","Запрос на регистрацию в програме лояльности отсутсвует"
+Success,Успешно
+Error,Ошибка
+"Loyalty program for Regular Customers","Программа лояльности для постоянных клиентов"
+"Loyalty Program","Програма лояльности"
