#13 Cookies. Session. Session storage: implement logged in validation and save customers id in database from session

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
@@ -17,3 +17,4 @@ Success,Success
 Error,Error
 "Loyalty program for Regular Customers","Loyalty program for Regular Customers"
 "Loyalty Program","Loyalty Program"
+"Please, sign in or sign up","Please, sign in or sign up"
