#13 Cookies. Session. Session storage: implemented message display in the tab on the Product Page instead of the button when request has already been sent

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
@@ -18,3 +18,4 @@ Error,Error
 "Loyalty program for Regular Customers","Loyalty program for Regular Customers"
 "Loyalty Program","Loyalty Program"
 "Please, sign in or sign up","Please, sign in or sign up"
+"Already requested!","Already requested!"
