--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -18,3 +18,4 @@ Error,Ошибка
 "Loyalty program for Regular Customers","Программа лояльности для постоянных клиентов"
 "Loyalty Program","Програма лояльности"
 "Please, sign in or sign up","Пожайлуста, войдите в свой аккаунт или зарегистрируйтесь"
+"Already requested!","Запрос был отправлен раннее!"
