#17 Configurations and ACL: implemented ability to disable the whole module, to disable sending requests by guests and removed user-specific fields when the customer is logged in

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
@@ -19,3 +19,9 @@ Error,Error
 "Loyalty Program","Loyalty Program"
 "Please, sign in or sign up","Please, sign in or sign up"
 "Already requested!","Already requested!"
+", for register in loyalty program, please click button below",", for register in loyalty program, please click button below"
+"General Settings","General Settings"
+"Settings per store view are not available","Settings per store view are not available"
+"Enabled","Enabled"
+"Allow for Guests","Allow for Guests"
+"Allow guests to submit discount requests","Allow guests to submit discount requests"
