--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -19,3 +19,9 @@ Error,Ошибка
 "Loyalty Program","Програма лояльности"
 "Please, sign in or sign up","Пожайлуста, войдите в свой аккаунт или зарегистрируйтесь"
 "Already requested!","Запрос был отправлен раннее!"
+", for register in loyalty program, please click button below",", для регистрации в программе лояльности, нажмите на кнопку ниже"
+"General Settings","Главные настройки"
+"Settings per store view are not available","Настройки для отдельных витрин недоступны"
+"Enabled","Включено"
+"Allow for Guests","Разрешено для гостей"
+"Allow guests to submit discount requests","Незарегистрированые пользователи могут отправлять запрос на скидку"
