#18 Listings and forms: created a grid for Regular Customer requests without Customer ID, Customer Name and Admin ID columns and some controllers

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -25,3 +25,22 @@ Error,Ошибка
 "Enabled","Включено"
 "Allow for Guests","Разрешено для гостей"
 "Allow guests to submit discount requests","Незарегистрированые пользователи могут отправлять запрос на скидку"
+"Regular Customers","Постоянные покупатели"
+"Personal Discount","Персональна знижка"
+"Edit","Изменить"
+"Delete","Delete"
+"Add New Request","Добавить новый запрос"
+"Are you sure you want to delete selected requests?","Вы действительно хотите удалить выбранные запросы?"
+"Delete Requests","Удалить запросы"
+"Change status","Изменить статус"
+"Pending","На рассмотрении"
+Approved,Подтверждено
+Declined,Отклонено
+"Discount Request ID","ID запроса на скидку"
+"Product ID","ID продукта"
+"Product Name","Имя продукта"
+"Entered Name","Введенное имя"
+"Are you sure you want to delete this request?","Вы дествительно хотите удалить этот продукт?"
+"Website","Вебсайт"
+"Status","Статус"
+"Date added","Дата добавления"
