#18 Listings and forms: added controllers for delete and edit requests, created a form for edit request

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
@@ -44,3 +44,9 @@ Declined,Declined
 "Website","Website"
 "Status","Status"
 "Date added","Date added"
+"Request deleted!","Request deleted!"
+"We can\'t find a request to delete.","We can\'t find a request to delete."
+"This request no longer exists.","This request no longer exists."
+"Edit Discount Request","Edit Discount Request"
+"New Discount Request","New Discount Request"
+Save,Save
