--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -44,3 +44,9 @@ Declined,Отклонено
 "Website","Вебсайт"
 "Status","Статус"
 "Date added","Дата добавления"
+"Request deleted!","Запрос удален"
+"We can\'t find a request to delete.","Невозможно найти запрос для удаления"
+"This request no longer exists.","Даный запрос больше не существует"
+"Edit Discount Request","Редактировать запрос"
+"New Discount Request","Новый запрос"
+Save,Сохранить
