--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -56,3 +56,6 @@ Save,Сохранить
 "We'll notify you updated about the request status.","Мы сообщим Вам дополнительно про изменение статуса запроса."
 "Your request for the product %product_name has been approved!","Ваш запрос на получение скидки на товар %product_name одобрен!"
 "Your request for the product %product_name has been declined!","Ваш запрос на получение скидки на товар %product_name отклонен!"
+"Notify Customer by Email","Сообщить пользователю об отправке емейла"
+"Send Email","Отправить емеил"
+"For %1 requests(s) was sent email.","Для %1 запроса(ов) был отправлен емеил"
