#19 Emails: added configuration to select email sender.

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/en_US.csv
@@ -59,3 +59,4 @@ Save,Save
 "Notify Customer by Email","Notify Customer by Email"
 "Send Email","Send Email"
 "For %1 requests(s) was sent email.","For %1 requests(s) was sent email."
+"Email Sender","Email Sender"
