--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -59,3 +59,4 @@ Save,Сохранить
 "Notify Customer by Email","Сообщить пользователю об отправке емейла"
 "Send Email","Отправить емеил"
 "For %1 requests(s) was sent email.","Для %1 запроса(ов) был отправлен емеил"
+"Email Sender","Отправитель емейлов"
