#22 Order totals: added "raw" totals to cart

--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/i18n/ru_RU.csv
@@ -41,7 +41,7 @@ Email,Емеил
 Register,Зарегистрироваться
 Success,Успешно
 Error,Ошибка
-"Personal Discount","Персоенальная скидка"
+"Personal Discount","Персональная скидка"
 "Regular Customers","Постоянные покупатели"
 "General Settings","Главные настройки"
 "Settings per store view are not available","Настройки для отдельных витрин недоступны"
